--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,6 +4,9 @@ $padding-sm: 5px;
 $padding-md: 10px;
 
 $font-size-base: 12px;
+$font-size-lg: 14px;
+
+$gray: #aaaaaa;
 
 body {
 	font-size: $font-size-base;
@@ -30,7 +33,7 @@ header {
 		text-align: center;
 		
 		p {
-			font-size: 14px;
+			font-size: $font-size-lg;
 			letter-spacing: 1px;
 		}
 	}
@@ -46,7 +49,7 @@ header {
 	}
 }
 
-ul {
+.cards {
 	@include clearfix;
 	padding: 0;
 	list-style-type: none;
@@ -57,7 +60,7 @@ ul {
 	}
 }
 
-li {
+.cards > li {
 	@extend .col-md-4;
 	float: left;
 	padding: $padding-md;
@@ -91,4 +94,28 @@ li {
 
 img {
 	max-width: 100%;
+}
+
+#accordion {
+	h3 {
+		margin-bottom: 0;
+		font-size: $font-size-lg;
+		background: $gray;
+		padding: $padding-md;
+		border: 1px black solid;
+			
+		&:hover {
+			cursor: pointer;
+			background: lighten($gray, 10%);
+		}
+	}
+	
+	.card {
+		border-radius: 0;
+		padding: $padding-md;
+		
+		p:last-of-type {
+			margin-bottom: 0;
+		}
+	}
 }
